--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -4,3 +4,27 @@ category.AUDIO_BOOK=Audio Book
 category.E_BOOK_READER=E-Book Reader
 category.E_BOOK_READER_CASE=E-Book Reader Case
 category.BOOK_CASE=Book Case
+
+file_format.EPUB=EPUB
+file_format.PDF=PDF
+
+media_type.HARDCOVER=Hardcover
+media_type.SOFTCOVER=Softcover
+media_type.POCKET_SIZE=Pocket Size
+media_type.TABLET_SIZE=Tablet Size
+media_type.MONTHLY=Monthly
+
+paper_type.COATED=Coated
+paper_type.UN_COATED=Uncoated
+paper_type.AMERICAN_BRISTOL=American Bristol
+paper_type.TRACING=Tracing
+paper_type.CANVAS=Canvas
+paper_type.CELLOPHANE=Cellophane
+paper_type.CRAFT=Craft
+paper_type.MATTE_COATED_PLASTER=Matte Coated Plaster
+
+binding_type.SADDLE_STITCHING=Saddle Stitching
+binding_type.CASE_BINDING=Case Binding
+binding_type.CASE_WRAPPED=Case Wrapped
+binding_type.PLASTIC_COIL=Plastic Coil
+binding_type.PERFECT_BINDING=Perfect Binding
