--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -28,3 +28,8 @@ binding_type.CASE_BINDING=Case Binding
 binding_type.CASE_WRAPPED=Case Wrapped
 binding_type.PLASTIC_COIL=Plastic Coil
 binding_type.PERFECT_BINDING=Perfect Binding
+
+address_title.HOME=Home
+address_title.WORKPLACE=Work Place
+address_title.SUMMERY=Summery
+address_title.OTHER=Other
