Order model updates

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -56,3 +56,8 @@ delivery_status.DELIVERED=Delivered
 delivery_status.EXCEPTION=Exception
 delivery_status.EXPIRED=Expired
 delivery_status.PENDING=Pending
+delivery_status.CANCELED=Canceled
+
+order_status.PENDING=Pending
+order_status.CONFIRMED=Confirmed
+order_status.CANCELED=Canceled
