pending orders added

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -46,7 +46,7 @@ payment_status.FAILED=Failed
 payment_status.EXPIRED=Expired
 payment_status.REVOKED=Revoked
 payment_status.PREAPPROVED=Pre-approved
-payment_status.CANCELLED=Cancelled
+payment_status.CANCELLED=Canceled
 
 delivery_status.INFO_RECEIVED=Information Received
 delivery_status.IN_TRANSIT=In Transit
